--- a/packages/app/lib/components/form/Form.css
+++ b/packages/app/lib/components/form/Form.css
@@ -101,6 +101,15 @@ main {
 .ProseMirror p {
   margin: 0px;
 }
+
+/* Vertically center content in header cells */
+.ProseMirror th p {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: 100%;
+  margin: 0;
+}
 .ProseMirror .column-resize-handle {
   position: absolute;
   right: -2px;
@@ -136,4 +145,5 @@ main {
   color: #bbb;
   cursor: default;
   user-select: none;
+  vertical-align: middle !important;
 }
